--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title> presentation </title>
   </head>
   <body>
+    <h1> presentation academique </h1>
+      <ul>
+        <li> Je suis dans la classe 1G4 </li>
+        <li> Mes specialites sont mathematiques, physique-chimie et NSI </li>
+        <li> Je voudrais travailler dans le domaine informatique plus tard </li>
+    </ul>
+    <h1> presentation personnelle </h1> 
+    <p> J'aime peindre des tableaux. Voici le lien: ... </p>
+    <p> Je fais des via ferratas avec mon pere </p>
+    <p> J'aime lire des livres. Mes genres preferees sont le fantasy, la science-fiction et les romans policiers. </p> 
     <img >
   </body>
 </html>
