--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <p> J'aime peindre des tableaux. Voici le lien: ... </p>
     <p> Je fais des via ferratas avec mon pere </p>
     <p> J'aime lire des livres. Mes genres preferees sont le fantasy, la science-fiction et les romans policiers. </p> 
-    <img >
+    <img src="https://leasucikova.com/img/img-04.jpg">
   </body>
 </html>
