--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> presentation </title>
   </head>
   <body>
+    <img src="https://photos.app.goo.gl/s6qk3QKEqiJCzLBQ8" alt="my photo" width="128">
     <h1> presentation academique </h1>
       <ul>
         <li> Je suis dans la classe 1G4 </li>
