--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> presentation </title>
   </head>
   <body>
-    <img src="https://photos.google.com/share/AF1QipMH-Z0Plt0pnKD3vvSO13Ui62RZ_JRAwE_pNEnI16lmS5Ydn2AwICEfj82bN07LAw/photo/AF1QipOK6bCQ5IRtqurzUs3cjg71a0_lTGAYQl2cOLiZ?key=bm1SY3FzaVBWakZ2d0xGRVNwZEVZZ2cya3Q0Mld3" alt="my photo" width="128">
+    <img src="https://photos.google.com/share/AF1QipMH-Z0Plt0pnKD3vvSO13Ui62RZ_JRAwE_pNEnI16lmS5Ydn2AwICEfj82bN07LAw/photo/AF1QipOK6bCQ5IRtqurzUs3cjg71a0_lTGAYQl2cOLiZ?key=bm1SY3FzaVBWakZ2d0xGRVNwZEVZZ2cya3Q0Mld3" alt="my photo 2" width="128">
     <h1> presentation academique </h1>
       <ul>
         <li> Je suis dans la classe 1G4 </li>
