--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> presentation </title>
+    <title> Présentation </title>
   </head>
   <body>
     <img src="https://lh3.googleusercontent.com/Sl9BBjg2gsrbrfjnfuOZjoLwSpxsWiFcQF0ssXpyArRJV47xH8JnhzEme8MUPcJzESp7--YAGCeow_QnCFTTWy0uCSYqigzN7JN8l2_Gtkpgc1u44LuQUjZL4Mx6EsKwcLErMt1Y7ORzXWoOFSpipgnhOTsQgxX_CjYkhy6XCLUoW-Oehx3mGBR7fzWWb9OymF6MmVcSGNakLIvavrExYrgron-0SyjzuxgoDbUtywJTaCdje3e5ihnEFXfPdpBd3AzwSgrJuMk69KaKbhN314COyfG5wzh-UVmCwx2S7W45wA-XSnpdgWCuQGByknQqxLc5mOAiLJUslIS9nXvsTYXFe_8UoO9ochIYbATAWDEocZseEM39qIJTVH0uUhokDbTHReQ4GC0avFF75J93KI0CNtPXUzHsPzDsayh58m4BsUafyaoy_fElyEys4nphD6nppeZ3ep-55ZGdaT6Of2mMZ3T5WmQJGABqTHfAVNCxIQrRiy5IMhmu6iWm0sIZUrcWfdH6es86t6zvzrlam_oerIzK5vKgAdk9xm4uCmEZlZh5nFgse8scpUtiE-7zLsArkWQXfF-NW1TC1FItGMXo80epPz0BHCdEQuC3IgkprMwgTGg805J4ONHdlx1SbYVAXRssRfyAe_P6HcTkexnPcwcr55TceVaYamt3-mpgRKfrjMU1XddAg5h_s8UZqJ4zh63aXXFMbNJfpsybltGPMJCJBs6dgHPPsWOxXUe3JsYrTIpQkVU=s250-k-rw-no"
          alt="my photo 3" width="128">
-    <h1> presentation academique </h1>
+    <h1> Présentation académique </h1>
       <ul>
-        <li> Je suis dans la classe 1G4 </li>
-        <li> Mes specialites sont mathematiques, physique-chimie et NSI </li>
-        <li> Je voudrais travailler dans le domaine informatique plus tard </li>
+        <li> Je suis dans la classe 1G4. </li>
+        <li> Mes specialités sont mathématiques, physique-chimie et NSI. </li>
+        <li> Je voudrais travailler dans le domaine informatique plus tard. </li>
     </ul>
-    <h1> presentation personnelle </h1> 
+    <h1> Présentation personnelle </h1> 
     <p> J'aime peindre des tableaux. Voici le lien: ... </p>
-    <p> Je fais des via ferratas avec mon pere </p>
-    <p> J'aime lire des livres. Mes genres preferees sont le fantasy, la science-fiction et les romans policiers. </p> 
+    <p> Je fais des via ferratas avec mon père. </p>
+    <p> J'aime lire des livres. Mes genres préférées sont le fantasy, la science-fiction et les romans policiers. </p> 
     <img src="https://leasucikova.com/img/img-04.jpg">
   </body>
 </html>
