--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li> Je voudrais travailler dans le domaine informatique plus tard. </li>
     </ul>
     <h1> Présentation personnelle </h1> 
-    <p> J'aime peindre des tableaux. Voici le lien: ... </p>
+    <p> J'aime peindre des tableaux. Voici le lien: <a> href="https://leasucikova.com/"Mon site web </a> </p>
     <p> Je fais des via ferratas avec mon père. </p>
     <p> J'aime lire des livres. Mes genres préférées sont le fantasy, la science-fiction et les romans policiers. </p> 
     <img src="https://leasucikova.com/img/img-04.jpg">
