--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <h1>Voici une photo de moi-même. </h1>
     <img src="https://lh3.googleusercontent.com/Sl9BBjg2gsrbrfjnfuOZjoLwSpxsWiFcQF0ssXpyArRJV47xH8JnhzEme8MUPcJzESp7--YAGCeow_QnCFTTWy0uCSYqigzN7JN8l2_Gtkpgc1u44LuQUjZL4Mx6EsKwcLErMt1Y7ORzXWoOFSpipgnhOTsQgxX_CjYkhy6XCLUoW-Oehx3mGBR7fzWWb9OymF6MmVcSGNakLIvavrExYrgron-0SyjzuxgoDbUtywJTaCdje3e5ihnEFXfPdpBd3AzwSgrJuMk69KaKbhN314COyfG5wzh-UVmCwx2S7W45wA-XSnpdgWCuQGByknQqxLc5mOAiLJUslIS9nXvsTYXFe_8UoO9ochIYbATAWDEocZseEM39qIJTVH0uUhokDbTHReQ4GC0avFF75J93KI0CNtPXUzHsPzDsayh58m4BsUafyaoy_fElyEys4nphD6nppeZ3ep-55ZGdaT6Of2mMZ3T5WmQJGABqTHfAVNCxIQrRiy5IMhmu6iWm0sIZUrcWfdH6es86t6zvzrlam_oerIzK5vKgAdk9xm4uCmEZlZh5nFgse8scpUtiE-7zLsArkWQXfF-NW1TC1FItGMXo80epPz0BHCdEQuC3IgkprMwgTGg805J4ONHdlx1SbYVAXRssRfyAe_P6HcTkexnPcwcr55TceVaYamt3-mpgRKfrjMU1XddAg5h_s8UZqJ4zh63aXXFMbNJfpsybltGPMJCJBs6dgHPPsWOxXUe3JsYrTIpQkVU=s250-k-rw-no"
-         alt="my photo 3" width="128">
+         alt="my photo 3">
     <h1> Présentation académique </h1>
       <ul>
         <li> Je suis dans la classe 1G4. </li>
-        <li> Mes specialités sont mathématiques, physique-chimie et NSI. </li>
+        <li> Mes spécialités en première sont les mathématiques, la physique-chimie et l'NSI. </li>
         <li> Je voudrais travailler dans le domaine informatique plus tard. </li>
     </ul>
     <h1> Présentation personnelle </h1> 
