--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p> Je fais des via ferratas avec mon père. </p>
     <p> J'aime lire des livres. Mes genres préférées sont le fantasy, la science-fiction et les romans policiers. </p> 
     <p> J'aime aussi boire du thé et porter des écharpes. </p> 
-    <a href="../projets"> mes projets de NSI </a>
+    <h1> Mes projets </h1>
+    <a href="../projets"> Projet Sierpinski </a>
   </body>
 </html>
