--- a/projets.html
+++ b/projets.html
@@ -1,1 +1,4 @@
-
+<h1> Le tapis de Sierpinski </h1>
+<h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
+<p> Un tapis de Sierpinski est un motif d'un triangle embouteill les uns dans les autres. Voici une image pour mieux le visualiser. </p>
+<img src="https://images.app.goo.gl/BKLNdtgpUs1c98Q66">
