--- a/projets.html
+++ b/projets.html
@@ -2,3 +2,4 @@
 <h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
 <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
 <img src="https://images.app.goo.gl/BKLNdtgpUs1c98Q66">
+<a href="../index.html"> Retour à la page précédente </a> 
