--- a/projets.html
+++ b/projets.html
@@ -1,5 +1,5 @@
 <h1> Le tapis de Sierpinski </h1>
 <h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
 <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
-<img src="https://images.app.goo.gl/BKLNdtgpUs1c98Q66">
+<img src="https://fr.wikipedia.org/wiki/Triangle_de_Sierpi%C5%84ski#/media/Fichier:SierpinskiTriangle.svg">
 <a href="../index.html"> Retour à la page précédente </a> 
