--- a/projets.html
+++ b/projets.html
@@ -2,4 +2,6 @@
 <h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
 <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
 <img src="https://fr.wikipedia.org/wiki/Triangle_de_Sierpi%C5%84ski#/media/Fichier:SierpinskiTriangle.svg" alt="Tapis de Sierpinski">
+<h2> Description de mon programme Python </h2>
+<h2> Le programme </h2> 
 <a href="../index.html"> Retour à la page précédente </a> 
