--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li> Je voudrais travailler dans le domaine informatique plus tard. </li>
     </ul>
     <h1> Présentation personnelle </h1> 
-    <p> J'aime peindre des tableaux. Voici le lien à <a href="https://leasucikova.com/">mon site web </a> ou à <a href="https://leasucikova.glideapp.io/"> mon application </a>. </p>
+    <p> Je peint des tableaux. Voici le lien à <a href="https://leasucikova.com/">mon site web </a> ou à <a href="https://leasucikova.glideapp.io/"> mon application </a>. </p>
     <p> Je fais des via ferratas avec mon père. </p>
     <p> J'aime lire des livres. Mes genres préférées sont le fantasy, la science-fiction et les romans policiers. </p> 
     <p> J'aime aussi boire du thé et porter des écharpes. </p> 
