--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <p> J'aime lire des livres. Mes genres préférées sont le fantasy, la science-fiction et les romans policiers. </p> 
     <p> J'aime aussi boire du thé et porter des écharpes. </p> 
     <h1> Mes projets </h1>
-    <a href="../projets"> Projet Sierpinski </a>
+    <ul>
+      <li> <a href="../projets"> Projet Sierpinski </a> </li>
+    </ul>
   </body>
 </html>
