--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p> J'aime aussi boire du thé et porter des écharpes. </p> 
     <h1> Mes projets </h1>
     <ul>
-      <li> <a href="../projets"> Projet Sierpinski </a> </li>
+      <li> <a href="/projets"> Projet Sierpinski </a> </li>
     </ul>
   </body>
 </html>
