--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <h1>Voici une photo de moi-même. </h1>
-    <img src="/P1060257.JPG"
-         alt="my photo 3">
+    <img src="/P1060257.JPG" alt="my photo 3">
     <h1> Présentation académique </h1>
       <ul>
         <li> Je suis dans la classe 1G4. </li>
