--- a/projets.html
+++ b/projets.html
@@ -1,7 +1,18 @@
-<h1> Le tapis de Sierpinski </h1>
-<h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
-<p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
-<img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
-<h2> Description de mon programme Python </h2>
-<h2> Le programme </h2> 
-<a href="index.html"> Retour à la page précédente </a> 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <title> Présentation </title>
+  </head>
+  <body>
+    <h1> Le tapis de Sierpinski </h1>
+    <h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
+    <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
+    <h2> Description de mon programme Python </h2>
+    <h2> Le programme </h2> 
+    <a href="index.html"> Retour à la page précédente </a> 
+  </body>  
+</html>
