--- a/projets.html
+++ b/projets.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link href="/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
-    <title> Présentation </title>
+    <title> Sierpinski </title>
   </head>
   <body>
     <h1> Le tapis de Sierpinski </h1>
