--- a/projets.html
+++ b/projets.html
@@ -13,6 +13,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
     <h2> Description de mon programme Python </h2>
     <h2> Le programme </h2> 
+    <a href="Lea Sucikova - Programme Sierpinski.py"> Lien </a>
     <a href="index.html"> Retour à la page précédente </a> 
   </body>  
 </html>
