--- a/projets.html
+++ b/projets.html
@@ -12,6 +12,11 @@
     <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
     <h2> Description de mon programme Python </h2>
+    J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
+    J'ai changé les regles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
+    Apres avoir déclenché le programme, le résultat n'était pas celui qui était attendu. Essayant plusieurs versions du code, cela ne fonctionne toujours pas alors je demande a mon pere de m'aider. 
+    Il imbrique des 'print' dans les boucles pour voir ce qu'il se passe pendant le programme. Il remarque que le programme ne lit pas les '−', qui sont des hyphens, et non des signes de soustraction.
+    Je modifie le code pour prendre en compte de cette différence et le programme fonctionne! Quelle soulagement! <p/>
     <h2> Le programme </h2> 
     <p> Voici le <a href="Lea Sucikova - Programme Sierpinski.py"> lien</a> pour télécharger mon programme. </p>
     <a href="index.html"> Retour à la page précédente </a> 
