--- a/projets.html
+++ b/projets.html
@@ -11,8 +11,18 @@
     <h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
     <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
-    <h2> Description de mon programme Python </h2>
-    J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
+    <h2> Description du programme </h2> 
+    <p> Pour transcrire un déplacement de 10 pixels, on va utiliser les lettres F ou G 
+      et pour un changement d'angle vers la gauche ou la droite, on utilise un plus (+) pour la gauche et un moins (-) pour la droite.  
+      Les regles pour obtenir un tapis de Sierpinski sont les suivantes: 
+      <ul>
+        <li> On remplace chaque F par F-G+F+G-F. </li>
+        <li> On remplace chaque G par GG. </li> 
+        <li> Tout autre signe reste le meme. </li>
+    </ul>
+    Ensuite a partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. </p>
+    <h2> Rapport de ma démarche </h2>
+    <p> J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
     J'ai changé les regles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
     Apres avoir déclenché le programme, le résultat n'était pas celui qui était attendu. Essayant plusieurs versions du code, cela ne fonctionne toujours pas alors je demande a mon pere de m'aider. 
     Il imbrique des 'print' dans les boucles pour voir ce qu'il se passe pendant le programme. Il remarque que le programme ne lit pas les '−', qui sont des hyphens, et non des signes de soustraction.
