--- a/projets.html
+++ b/projets.html
@@ -14,19 +14,20 @@
     <h2> Description du programme </h2> 
     <p> Pour transcrire un déplacement de 10 pixels, on va utiliser les lettres F ou G 
       et pour un changement d'angle vers la gauche ou la droite, on utilise un plus (+) pour la gauche et un moins (-) pour la droite.  
-      Les regles pour obtenir un tapis de Sierpinski sont les suivantes: 
+      Les règles pour obtenir un tapis de Sierpinski sont les suivantes: 
       <ul>
         <li> On remplace chaque F par F-G+F+G-F. </li>
         <li> On remplace chaque G par GG. </li> 
-        <li> Tout autre signe reste le meme. </li>
+        <li> Tout autre signe reste le même. </li>
     </ul>
-    Ensuite a partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. </p>
+    Ensuite à partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. </p>
     <h2> Rapport de ma démarche </h2>
     <p> J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
-    J'ai changé les regles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
-    Apres avoir déclenché le programme, le résultat n'était pas celui qui était attendu. Essayant plusieurs versions du code, cela ne fonctionne toujours pas alors je demande a mon pere de m'aider. 
-    Il imbrique des 'print' dans les boucles pour voir ce qu'il se passe pendant le programme. Il remarque que le programme ne lit pas les '−', qui sont des hyphens, et non des signes de soustraction.
-    Je modifie le code pour prendre en compte de cette différence et le programme fonctionne! Quelle soulagement! <p/>
+    J'ai changé les règles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
+    Après avoir éxécuté le programme, le résultat n'était pas celui qui était attendu. Après avoir essayé plusieurs versions du code, 
+    cela ne fonctionne toujours pas alors j'ai demandé à mon père de m'aider. 
+    Il a imbriqué des 'print' dans les boucles pour voir ce qu'il se passe pendant l'éxécution du programme. Il a remarqué que le programme ne lit pas les '−', qui sont des hyphens, et non des signes de soustraction.
+    J'ai alors modifié le code pour prendre en compte cette différence et le programme a fonctionné! Quelle soulagement! <p/>
     <h2> Le programme </h2> 
     <p> Voici le <a href="Lea Sucikova - Programme Sierpinski.py"> lien</a> pour télécharger mon programme. </p>
     <a href="index.html"> Retour à la page précédente </a> 
