--- a/projets.html
+++ b/projets.html
@@ -20,7 +20,7 @@
         <li> On remplace chaque G par GG. </li> 
         <li> Tout autre signe reste le même. </li>
     </ul>
-    Ensuite à partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. </p>
+    Ensuite à partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. Le programme <i>turtle</i> affiche le code sous forme graphique. </p>
     <h2> Rapport de ma démarche </h2>
     <p> J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
     J'ai changé les règles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
