--- a/projets.html
+++ b/projets.html
@@ -9,7 +9,7 @@
   <body>
     <h1> Le tapis de Sierpinski </h1>
     <h2> Qu'est-ce qu'un tapis de Sierpinski? </h2>
-    <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser. </p>
+    <p> Un tapis de Sierpinski est un motif de triangles embouteillés les uns dans les autres afin de 'remplir' le plus possible le triangle initial. Voici une image pour mieux le visualiser: </p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
     <h2> Description du programme </h2> 
     <p> Pour transcrire un déplacement de 10 pixels, on va utiliser les lettres F ou G 
