--- a/projets.html
+++ b/projets.html
@@ -13,14 +13,16 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/SierpinskiTriangle.svg" alt="Tapis de Sierpinski" width="200">
     <h2> Description du programme </h2> 
     <p> Pour transcrire un déplacement de 10 pixels, on va utiliser les lettres F ou G 
-      et pour un changement d'angle vers la gauche ou la droite, on utilise un plus (+) pour la gauche et un moins (-) pour la droite.  
+      et pour un changement d'angle de 120 degrés vers la gauche ou la droite, on utilise un plus (+) pour la gauche et un moins (-) pour la droite.  
       Les règles pour obtenir un tapis de Sierpinski sont les suivantes: 
       <ul>
         <li> On remplace chaque F par F-G+F+G-F. </li>
         <li> On remplace chaque G par GG. </li> 
         <li> Tout autre signe reste le même. </li>
     </ul>
-    Ensuite à partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. Le programme <i>turtle</i> affiche le code sous forme graphique. </p>
+    Ensuite à partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. Le programme <i>turtle</i> affiche le code sous forme graphique. 
+    Voici comment se développe le triangle en fonction de combien de boucles sont éxécutées:</p>
+    <link href="https://static-01.hindawi.com/articles/aans/volume-2013/560969/figures/560969.fig.001.jpg" alt="The Sierpinski triangle after nth iterations">
     <h2> Rapport de ma démarche </h2>
     <p> J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
     J'ai changé les règles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
