--- a/projets.html
+++ b/projets.html
@@ -22,7 +22,7 @@
     </ul>
     Ensuite à partir du motif initial, qui est F-G-G, on le transforme en l'imbriquant dans une boucle. Le programme <i>turtle</i> affiche le code sous forme graphique. 
     Voici comment se développe le triangle en fonction de combien de boucles sont éxécutées:</p>
-    <link href="https://static-01.hindawi.com/articles/aans/volume-2013/560969/figures/560969.fig.001.jpg" alt="The Sierpinski triangle after nth iterations">
+    <link src="https://static-01.hindawi.com/articles/aans/volume-2013/560969/figures/560969.fig.001.jpg" alt="The Sierpinski triangle after nth iterations">
     <h2> Rapport de ma démarche </h2>
     <p> J'ai téléchargé le programme du TP noté corrigé disponible sur le site du professeur. 
     J'ai changé les règles, le motif initial et quelques d'autres modifications pour le faire fonctionner avec la tapis de Sierpinski. 
